# zcc

./: .gitattributes  .gitignore  AGENTS.md  AGENT_HANDOFF.md  AUDIT_PACKAGE.md  BUGS.md  BUILD.txt  B_CATALYZE_seed0.json  B_CATALYZE_seed1.json  CAPABILITY_EXPANSION_REQUEST.md  CG-IR-004_DEEP_ANALYSIS.md  CG_IR_005_PRIME_STABILIZATION.md  CHANGELOG.md  CODEOWNERS  COMMANDS.md  Dockerfile.sandbox  EVIDENCE_RETENTION.md  EVM_LIFTER_BOUNDARY.md  EVM_LIFTER_ISSUE_15_TRACE.md  FIX_README.md  FLOAT_FALLTHROUGH_CORRUPTION.md  FORENSIC_023A_PARSER001.md  FORENSIC_024_REGALLOC_DETERMINISM.md  FORENSIC_CORRECTION_2026-04-19.md  FORTIFY_DIFF.json  FORTIFY_REPORT.html  GEMINI_INSTRUCTIONS.md  IR_CORPUS_README.md  IR_SCHEMA.md  LAUNCH_HAMILTONIAN_VISUALIZER.bat  LAUNCH_HEIST_DASHBOARD.bat  LAUNCH_MASTER_GOD.bat  LAUNCH_MASTER_GOD.py  LICENSE  MATRIX_MANIFEST.json  MILESTONE_GRAPHICS_VALIDATION.md  Makefile  Makefile.ir  Makefile.rej  Makefile.release  (+1147 more)
.antigravity/: ignore
.compat_logs/: recursive_runs.tsv  recursive_status.json  run_suite.ps1  summary.tsv
.compat_out/: build_assets.js  cheatsheet_check.js  cheatsheet_extracted.js  clone_roundtrip.js  export_smoke.js  extract_js.js  offline_smoke.js  palette_smoke.js  phase4_bridge_smoke.js  phase4_check.js  phase4_extracted.js  phase4_hamiltonian_smoke.js  phase4_invariants_under_edit.js  phase4_macros_smoke.js  phase4_prime_bridge.js  phase4_shuffle_determinism.js  pp_crlf_probe_crlf.c  pp_crlf_probe_lf.c  prime_lab_smoke.js  (+3 more)
rust_frontend/: Cargo.toml
rust_frontend/src/: main.rs
rust_frontend/src/ffi/: mod.rs  shm.rs
(+1433 files in other folders)
