[package]
name = "zcc_rust_frontend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/main.rs"

[dependencies]
tokio = { version = "1.43", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = [] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"

[target.'cfg(unix)'.dependencies]
memmap2 = "0.9"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Memory",
] }

[[bin]]
name = "zcc-native-host"
path = "src/native_host.rs"

[dependencies.rayon]
version = "1.8"

[dependencies.rand]
version = "0.8"
[dependencies.chrono]
version = "0.4"

[[bin]]
name = "generate_gallery"
path = "tools/generate_gallery.rs"
